# sonar-SLAM

./: .gitignore  LICENSE  README.md
bruce/: CMakeLists.txt  package.xml
bruce_msgs/: CMakeLists.txt  package.xml
bruce_msgs/include/bruce_msgs/: conversions.h
bruce_msgs/msg/: ISAM2Update.msg  PoseHistory.msg  keyframe_image.msg
bruce_msgs/src/bruce_msgs/: conversions.cpp
bruce_msgs/srv/: GetOccupancyMap.srv  PredictSLAMUpdate.srv  QueryExplorationPath.srv
bruce_slam/: CMakeLists.txt  README.md  package.xml  setup.py
bruce_slam/config/: bathy_feature.yaml  dead_reckoning.yaml  feature.yaml  gyro.yaml  icp.yaml  kalman.yaml  mapping.yaml  object_icp.yaml  slam.yaml
bruce_slam/launch/: slam.launch  slam_sim_playback.launch
bruce_slam/models/: real_data_model.h5  sim_model.h5
bruce_slam/notebooks/: batch_report.py  box_plot.py  get_report.sh  grid_search.sh  heat_map.py  run_report.py  utils.py  view_cloud.py
bruce_slam/rviz/: playback.rviz  video.rviz
bruce_slam/scripts/: baysian_mapping_node.py  dead_reckoning_node.py  feature_extraction_node.py  gyro_node.py  image_compressor.py  kalman_node.py  mapping_node.py  slam_node.py  waypoint_control.py
bruce_slam/scripts/utils/: plot_runs.py  record_bag.sh  run_bag.sh
bruce_slam/src/bruce_slam/: CFAR.py  baysian_mapping.py  dead_reckoning (copy).py  dead_reckoning.py  dead_reckoning_1.py  dead_reckoning_2.py  dead_reckoning_dvl_callback.py  dead_reckoning_original.py  dr_chloee.py  feature_extraction.py  gyro.py  kalman.py  kalman_pub.py  mapping.py  slam.py  slam_objects.py  slam_ros.py  sonar.py
bruce_slam/src/bruce_slam/cpp/: cfar.cpp  pcl.cpp
bruce_slam/src/bruce_slam/utils/: conversions.py  io.py  topics.py  visualization.py
